# OOP

lab2-4/: CMakeLists.txt  main.c
lab2-4/controllers/: controllers.c  controllers.h
lab2-4/domain/: models.c  models.h  validators.c  validators.h
lab2-4/repos/: repos.c  repos.h
lab2-4/tests/: controllerTests.c  tests.c
lab2-4/ui/: ui.c  ui.h
lab2-4/utils/: utils.c
lab2-4_dinamic/: CMakeLists.txt
lab2-4_dinamic/controllers/: controllers.c  controllers.h
lab2-4_dinamic/domain/: validators.h
lab2-4_dinamic/repos/: repos.c  repos.h
lab2-4_dinamic/tests/: repoTests.c  repoTests.h  tests.c  utilsTests.c  utilsTests.h
lab2-4_dinamic/utils/: utils.c  utils.h
test/: CMakeLists.txt  creator.c  creator.h  main.c
